# dare

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.txt
benchmark/: chameleon_gemm.cpp  chameleon_getrf.cpp  cublas_gemm.cpp  cusolver_getrf.cpp  cusolver_util.h  flops.h  parsec_gemm.cpp
dare/: ddarechameleon.cpp  ddareparsec.cpp
dare/chameleonsrc/: chameio.cpp  chameio.hpp  testings.h
dare/common/: cnpy.cpp  cnpy.h  darecommon.cpp  darecommon.h
dare/fits/: CMakeLists.txt  file.cpp  file.hpp  interface.cpp  interface.hpp  read.cpp  read.hpp  types.cpp  types.hpp  write.cpp  write.hpp
dare/parsecsrc/: distdata.cpp  distdata.h  flops.h  parsecio.cpp  parsecio.hpp  util.cpp  util.hpp
dare/parsecsrc/jdf/: simpletask.jdf
dare/tests/: chameleon_fitsfile.cpp  chameleon_multiplegpu.cpp
misc/: dare.m
python/: daresolver.py  flops.py  generateBinvR.py
